# simulink-to-cpp-migration

./: .gitignore  CMakeLists.txt  README.md
bridge/: pid_sfunc_bridge.cpp  pid_sfunc_bridge.h
include/kalman/: KalmanFilter.hpp
include/pid/: PidController.hpp
legacy/: kalman_filter.c  kalman_filter.h  pid_controller.c  pid_controller.h
tests/: test_kalman_equivalence.cpp  test_pid_equivalence.cpp
